<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:layout_margin="@dimen/margin_form"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/caixa_arredondada"
        android:paddingRight="@dimen/margin_form"
        android:paddingLeft="@dimen/margin_form"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_id_propriedade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text=""
            android:visibility="gone" />

        <EditText
            android:id="@+id/input_id_proprietario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text=""
            android:visibility="gone" />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <Spinner
                android:id="@+id/spinner_proprietario"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:layout_height="74dp"
                android:layout_width="0dp"
                android:layout_marginBottom="@dimen/margin_inputs_form"
                android:layout_marginTop="@dimen/margin_inputs_form"
                android:spinnerMode="dialog" />

            <Button
                android:text=""
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/btn_add_proprietario"
                android:drawableLeft="@drawable/add"></Button>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_inputs_form"
            android:layout_marginTop="@dimen/margin_inputs_form">

            <EditText
                android:id="@+id/input_nome_propriedade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_nome_propriedade"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_inputs_form"
            android:layout_marginTop="@dimen/margin_inputs_form">

            <EditText
                android:id="@+id/input_telefone_propriedade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_telefone"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_inputs_form"
            android:layout_marginTop="@dimen/margin_inputs_form">

            <EditText
                android:id="@+id/input_rua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_rua"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_inputs_form"
            android:layout_marginTop="@dimen/margin_inputs_form">

            <EditText
                android:id="@+id/input_bairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_bairro"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <EditText
                    android:id="@+id/input_numero"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_numero"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <EditText
                    android:id="@+id/input_cep"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_cep"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_inputs_form"
            android:layout_marginTop="@dimen/margin_inputs_form">

            <AutoCompleteTextView
                android:id="@+id/input_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/campo_uf"
                android:inputType="textCapWords|textAutoCorrect|textAutoComplete" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_inputs_form"
            android:layout_marginTop="@dimen/margin_inputs_form">

            <AutoCompleteTextView
                android:id="@+id/input_cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/campo_cidade"
                android:inputType="textCapWords|textAutoCorrect|textAutoComplete" />
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_salvar_propriedade"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="18dp"
            android:padding="12dp"
            android:text="@string/save" />
    </LinearLayout>


</ScrollView>
