...
    <string name="msg_falha_login">Falha no login</string>
    <string name="msg_dados_login_invalido">usuário ou senha inválidos</string>
    <string name="msg_erro_login_usuario">Usuário inválido</string>
    <string name="msg_erro_senha_usuario">Senha inválido</string>
    <string name="msg_erro_cadastro_usuario">CPF/CRMV já cadastrado(s)</string>
    <string name="msg_erro_cadastro_proprietario">CPF já cadastrado !</string>
    <string name="msg_erro_cadastro_geral">Campos inválidos</string>
    <string name="msg_erro_busca_proprietario">Proprietário não encontrado</string>
    <string name="msg_erro_editar_proprietario">Pesquise um proprietário</string>
    <string name="msg_erro_atualizar_proprietario">Erro ao atualizar o proprietário</string>
    <string name="msg_erro_spinner_proprietario">Selecione uma propriedade</string>
    <string name="msg_erro_cep_incompleto">CEP incompleto</string>
    <string name="msg_erro_telefone_incompleto">Telefone incompleto</string>
...
